# avr-audio-video-research

./: .gitignore  README.md  main.py  pyproject.toml
av-sync/: syncnet_paper_easy_exp.md  syncnet_ppt.md
docs/audio_codecs/: README.md  descript_audio_codec.md
docs/audio_fundamentals/: fourier_intuition.md  sound_physics_and_perception.md
docs/hydra/: index.html  make_me_hydra_docs.md
learning_hydra/conf/: config.yaml
learning_lightning/: README.md  train_a_model.py
notebooks/spectral_analysis/: magnitude_spectrum.ipynb  spectrogram.ipynb
notebooks/time_domain/: amplitude_envelope.ipynb  rms_energy_zcr.ipynb
projects/audio_model_visualizer/: .gitignore  check_audiosignal.py  main.py  pyproject.toml
projects/audio_model_visualizer/src/: analysis.ipynb  analysis.py  dac_codebook_proj_concat_viz.ipynb  dac_embeddings_concat_viz.ipynb  dac_embeddings_viz.ipynb  dac_indices_viz.ipynb  dac_latent_viz.ipynb  dac_temporal_slice_viz.ipynb  gumbel_noise_experiment.ipynb
projects/audio_model_visualizer/static/js/: main.js
projects/audio_model_visualizer/utils/: visualizer.py
projects/syncnet/: extended_presentation.md  syncnet_presentation.md
sound/: sound_reverb.md
sound/DAC/: readme.md
sound/codec/: readme.md
sound/wav2vec_vs_whisper/: README.md  app.py  pyproject.toml
sound/wav2vec_vs_whisper/src/: analysis.ipynb  dac_codebook_proj_concat_viz.ipynb  dac_embeddings_concat_viz.ipynb  dac_embeddings_viz.ipynb  dac_indices_viz.ipynb  dac_latent_viz.ipynb  dac_temporal_slice_viz.ipynb  dac_utils.py  gumbel_noise_experiment.ipynb
sound/wav2vec_vs_whisper/static/css/: style.css
sound/wav2vec_vs_whisper/static/js/: main.js
sound/wav2vec_vs_whisper/templates/: index.html
sound/wav2vec_vs_whisper/utils/: __init__.py  embedding_extractor.py  model_handler.py  visualizer.py  visualizer_backup.py
top_ai_QnA/opus_4.6/: 1.md
tutorials/hydra/: my_app.py
tutorials/pytorch_lightning/: train_a_model.py  train_val_test.py  (+1 more)
(+21 files in other folders)
