[project]
name = "videoera"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "hydra-core>=1.3.2",
    "ipykernel>=6.31.0",
    "lightning>=2.5.5",
    "notebook>=7.4.7",
    "omegaconf>=2.3.0",
    "opencv-python>=4.12.0.88",
    "torchvision>=0.23.0",
    "transformers>=4.57.1",
]

[tool.uv.workspace]
members = [
    "projects/audio_model_visualizer",
]
